--- a/Jog/app.config
+++ b/Jog/app.config
@@ -16,6 +16,7 @@
     <add key="SiteHeader" value="Jog" />
     <add key="SiteDescription" value="Just1n's Post" />
     <add key="SiteKeywords" value="博客，Just1n,.Net" />
+    <add key="SiteUrl" value="http://just1n.net" />
     <add key="BlogTitle" value="Just1n" />
     <add key="BlogDescription" value="Personal website of a man from Shanghai." />
     
